fix: complete translation parity integration